--- a/frontend/src/app/components/password/response-reset/response-reset.component.html
+++ b/frontend/src/app/components/password/response-reset/response-reset.component.html
@@ -1,3 +1,30 @@
-<p>
-  response-reset works!
-</p>
+<div class="mt-4 col-8 offset-2">
+    <div class="card">
+      <div class="card-header">
+        Reset Password
+      </div>
+      <div class="card-body">
+        <form #resetPasswordForm=ngForm (ngSubmit)="onSubmit()">
+            <div class="alert alert-danger" [hidden]="!error.reset_token">{{error.reset_token}}</div>
+          <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="Password" [(ngModel)]="form.password" required>
+              <div class="text-danger" [hidden]="!error.password">{{error.password}}</div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputPasswordConfirmation3" class="col-sm-2 col-form-label">Confirm Password</label>
+            <div class="col-sm-10">
+              <input type="password" name="password_confirmation" class="form-control" id="inputPasswordConfirmation3" placeholder="Confirm Password" [(ngModel)]="form.password_confirmation" required>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-10 offset-2">
+              <button type="submit" class="btn btn-primary" [disabled]="!resetPasswordForm.valid">Change Password</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
